--- a/src/components/card-car-settings/card-car-settings.module.scss
+++ b/src/components/card-car-settings/card-car-settings.module.scss
@@ -139,40 +139,14 @@
       justify-content: space-between;
       align-items: center;
       margin-bottom: 18px;
-      .button {
-        margin: 6px 0 6px 0;
-        height: 30px;
-        width: 110px;
-        font-family: Helvetica;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 11.5px;
-        line-height: 13px;
-        text-align: center;
-        letter-spacing: -0.0821429px;
 
-        color: #ffffff;
+      button {
+        margin-top: 12.5px;
+      }
 
-        border-radius: 4px;
-        box-sizing: border-box;
-        &:hover {
-          cursor: pointer;
-        }
-
-        &.save {
-          background: #007bff;
-          border: 0.5px solid #007bff;
+      .buttonGroup {
+        .save {
           margin-right: 12.5px;
-        }
-
-        &.cansel {
-          color: #3d5170;
-          background: #e9ecef;
-          border: 0.5px solid #0ec261;
-        }
-
-        &.delete {
-          background: #cb3656;
         }
       }
     }
