--- a/src/nullstyle.module.scss
+++ b/src/nullstyle.module.scss
@@ -36,6 +36,7 @@ body {
   font-size: 100%;
   line-height: 1;
   font-size: 14px;
+  font-family: 'Roboto', sans-serif;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
