--- a/src/routes/Login/login.module.scss
+++ b/src/routes/Login/login.module.scss
@@ -50,13 +50,12 @@
     .title {
       display: inline-block;
       width: 100%;
-      height: 58px;
+      margin: 20px 0;
       text-align: center;
       vertical-align: top;
 
       font-size: 17.5px;
       line-height: 20px;
-      letter-spacing: -0.4375px;
 
       &:after {
         content: '';
@@ -91,29 +90,19 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      span {
+      > span {
         font-size: 10.5px;
         line-height: 12px;
         letter-spacing: -0.18421px;
-        color: #007bff;
+        color: var(--primary-accent);
       }
-      button {
-        width: 110px;
-        height: 30px;
-        background: #007bff;
-        border: 0.5px solid #007bff;
-        box-sizing: border-box;
-        border-radius: 4px;
-        color: white;
-
-        &:hover {
-          cursor: pointer;
-          background: darken(#007bff, 20%);
-        }
-        &:active {
-          cursor: pointer;
-          background: darken(#007bff, 10%);
-        }
+    }
+    .button {
+      &:hover {
+        background: darken(#007bff, 20%);
+      }
+      &:active {
+        background: darken(#007bff, 10%);
       }
     }
   }
