--- a/src/routes/Login/login.module.scss
+++ b/src/routes/Login/login.module.scss
@@ -1,3 +1,5 @@
+@import '../../variables';
+
 .context {
   position: relative;
   left: 50%;
@@ -6,23 +8,7 @@
 
   max-width: 376px;
 
-  color: #3d5170;
-
-  input {
-    height: 30px;
-    width: 100%;
-    font-size: 11px;
-    line-height: 13px;
-    /* identical to box height */
-
-    letter-spacing: -0.192982px;
-
-    padding: 8px;
-
-    border: 0.5px solid #becad6;
-    box-sizing: border-box;
-    border-radius: 3px;
-  }
+  color: $button-gray-text;
 
   .header {
     display: flex;
@@ -40,7 +26,7 @@
 
   .form {
     height: 254px;
-    background: #ffffff;
+    background: $primary-white;
     box-shadow: 0px 1px 0px rgba(90, 97, 105, 0.11),
       0px 2px 4px rgba(90, 97, 105, 0.12), 0px 5px 5px rgba(90, 97, 105, 0.06),
       0px 3.5px 35px rgba(90, 97, 105, 0.1);
@@ -67,24 +53,9 @@
 
     .login {
       margin-bottom: 16px;
-      p {
-        font-size: 10.5px;
-        line-height: 12px;
-
-        letter-spacing: -0.18421px;
-
-        margin-bottom: 12px;
-      }
     }
     .password {
       margin-bottom: 16px;
-      p {
-        font-size: 10.5px;
-        line-height: 12px;
-
-        letter-spacing: -0.18421px;
-        margin-bottom: 12px;
-      }
     }
     .footer {
       display: flex;
@@ -93,16 +64,7 @@
       > span {
         font-size: 10.5px;
         line-height: 12px;
-        letter-spacing: -0.18421px;
-        color: var(--primary-accent);
-      }
-    }
-    .button {
-      &:hover {
-        background: darken(#007bff, 20%);
-      }
-      &:active {
-        background: darken(#007bff, 10%);
+        color: $primary-accent;
       }
     }
   }
