--- a/src/components/CarList/carList.module.scss
+++ b/src/components/CarList/carList.module.scss
@@ -70,7 +70,7 @@ td {
 
   //   overflow: hidden;
   margin: 4px;
-  color: $button-gray-text;
+  color: $gray-text;
   //   align-items: center;
   img {
     // width: 100%;
