--- a/src/components/CardCarSettings/cardCarSettings.module.scss
+++ b/src/components/CardCarSettings/cardCarSettings.module.scss
@@ -1,8 +1,10 @@
+@import '../../variables';
+
 .carSettings {
   display: flex;
   flex: 1 1 auto;
   height: 100vh;
-  background: #ffffff;
+  background: $primary-white;
   /* CardShadow#1 */
 
   box-shadow: 0px 2px 4px rgba(90, 97, 105, 0.12);
@@ -34,9 +36,7 @@
       line-height: 21px;
       /* identical to box height */
 
-      letter-spacing: -0.4375px;
-
-      color: #3d5170;
+      color: $gray-text;
     }
 
     .row {
@@ -55,11 +55,9 @@
           line-height: 12px;
           /* identical to box height */
 
-          letter-spacing: -0.18421px;
-
           /* Black */
 
-          color: #121212;
+          color: $primary-black;
         }
         .availableColor {
           display: flex;
@@ -70,7 +68,7 @@
           min-width: 300px;
           width: 100%;
           height: 30px;
-          border: 1px solid #becad6;
+          border: 1px solid $border-select;
           box-sizing: border-box;
           border-radius: 4px;
           padding: 0 11px;
@@ -80,19 +78,15 @@
           }
 
           &.inputError {
-            border-color: #c4183c;
+            border-color: $secondary-red;
             box-shadow: 0px 2.5px 5.5px rgba(196, 24, 60, 0.1);
           }
         }
         .error {
-          font-family: Helvetica;
-          font-style: normal;
-          font-weight: normal;
           font-size: 10px;
           line-height: 11px;
           /* identical to box height */
-          letter-spacing: -0.175439px;
-          color: #c4183c;
+          color: $secondary-red;
           padding-top: 4px;
           padding-left: 12px;
         }
@@ -104,13 +98,13 @@
           background-color: white;
           margin-left: 8px;
 
-          border: 1px solid #becad6;
+          border: 1px solid $border-select;
           box-sizing: border-box;
           border-radius: 4px;
 
           &:hover {
             cursor: pointer;
-            background-color: #e9ecef;
+            background-color: $secondary-gray;
           }
 
           div {
@@ -122,7 +116,7 @@
             // margin-top: 0px;
             span {
               font-size: 22px;
-              color: #becad6;
+              color: $border-select;
             }
           }
         }
