--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -8,4 +8,5 @@ $secondary-label: #495057;
 $grey-dark: #5a6169;
 $grey-light: #eeeeee;
 $sidebar-background: #151b1f;
-$button-gray-text: #3d5170;
+$gray-text: #3d5170;
+$border-select: #becad6;
