--- a/src/components/CarCard/carCard.module.scss
+++ b/src/components/CarCard/carCard.module.scss
@@ -1,3 +1,5 @@
+@import '../../variables';
+
 .title {
   display: flex;
   flex: 0 0 68px;
@@ -12,9 +14,8 @@
   h1 {
     font-size: 29px;
     line-height: 33px;
-    letter-spacing: -0.725px;
 
-    color: #3d5170;
+    color: $gray-text;
   }
 }
 .cardAuto {
