--- a/src/components/Error500/error500.module.scss
+++ b/src/components/Error500/error500.module.scss
@@ -1,3 +1,5 @@
+@import '../../variables';
+
 .wrap {
   position: relative;
   left: 50%;
@@ -12,41 +14,30 @@
     align-items: center;
 
     .title {
-      font-family: Roboto;
-      font-style: normal;
       font-weight: 500;
       font-size: 75px;
       line-height: 88px;
       /* identical to box height */
 
-      letter-spacing: -5.76923px;
-
       color: #cacedb;
     }
     .text {
-      font-family: Helvetica;
-      font-style: normal;
       font-weight: normal;
       font-size: 50px;
       line-height: 57px;
       /* identical to box height */
 
       text-align: center;
-      letter-spacing: -2.5px;
 
-      color: #3d5170;
+      color: $gray-text;
       margin-bottom: 15px;
     }
     .footer {
-      font-family: Helvetica;
-      font-style: normal;
-      font-weight: normal;
       font-size: 20px;
       line-height: 23px;
       /* identical to box height */
 
       text-align: center;
-      letter-spacing: -0.5px;
 
       color: #818ea3;
       margin-bottom: 35px;
@@ -55,9 +46,9 @@
     button {
       width: 95px;
       height: 30px;
-      color: white;
-      background: #007bff;
-      border: 0.5px solid #007bff;
+      color: $primary-white;
+      background: $primary-accent;
+      border: 0.5px solid $primary-accent;
       box-sizing: border-box;
       border-radius: 4px;
 
