--- a/src/components/Pagination/pagination.module.scss
+++ b/src/components/Pagination/pagination.module.scss
@@ -1,19 +1,38 @@
-/* Pagination links */
-.pagination a {
-  color: black;
-  float: left;
-  padding: 8px 16px;
-  text-decoration: none;
-  transition: background-color 0.3s;
+@import '../../variables';
+.pagination {
+  display: flex;
+  flex-wrap: wrap;
+  div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: $primary-accent;
+    // margin: 0 8px;
+    padding: 8px;
+    width: max-content;
+    height: max-content;
+
+    min-width: 28px;
+    min-height: 28px;
+
+    font-size: 15px;
+    line-height: 17px;
+
+    text-decoration: none;
+    transition: background-color 0.3s;
+    border-radius: 50%;
+
+    &.active {
+      background-color: dodgerblue;
+      color: $primary-white;
+    }
+  }
 }
 
 /* Style the active/current link */
-.pagination a.active {
-  background-color: dodgerblue;
-  color: white;
-}
 
 /* Add a grey background color on mouse-over */
-.pagination a:hover:not(.active) {
-  background-color: #ddd;
+.pagination div:hover:not(.active) {
+  background-color: $secondary-gray;
+  cursor: pointer;
 }
