--- a/src/nullstyle.module.scss
+++ b/src/nullstyle.module.scss
@@ -33,10 +33,11 @@ html,
 body {
   height: 100%;
   width: 100%;
-  font-size: 100%;
-  line-height: 1;
   font-size: 14px;
+  line-height: 16px;
   font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: normal;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
