--- a/src/components/Autocomplete/autocomplete.module.scss
+++ b/src/components/Autocomplete/autocomplete.module.scss
@@ -2,6 +2,7 @@
 
 .autocomplete {
   display: flex;
+  flex: 1 1 100%;
 
   .label {
     display: flex;
@@ -16,7 +17,7 @@
     position: relative;
 
     display: flex;
-    flex: 1 0 calc(100% - 91px);
+    // flex: 1 0 calc(100% - 91px);
 
     label {
       display: flex;
@@ -69,7 +70,7 @@
       display: flex;
       flex-direction: column;
       position: absolute;
-      min-width: 170px;
+      min-width: 270px;
       width: max-content;
       border: 1px solid $grey-light;
       margin-left: 8px;
