--- a/src/components/OrderList/orderList.module.scss
+++ b/src/components/OrderList/orderList.module.scss
@@ -44,11 +44,14 @@
 
       .filters {
         display: flex;
-        // justify-content: space-between;
-        flex-wrap: wrap;
-        flex: 1 1 auto;
+        justify-content: space-between;
+        // flex-wrap: wrap;
+        //flex: 1 1 auto;
         max-width: 500px;
         margin-left: 22px;
+        > div {
+          margin-right: 15px;
+        }
       }
       button {
         margin-left: auto;
@@ -75,10 +78,10 @@
 
       .row {
         display: flex;
-        // justify-content: space-between;
+        justify-content: space-between;
         align-items: center;
         min-height: 63px;
-        margin-bottom: 8px;
+        margin-bottom: 4px;
 
         &:hover {
           background: $grey-light;
@@ -91,26 +94,30 @@
           margin-left: 21px;
           margin-right: 16px;
           img {
+            width: 138px;
             height: 63px;
             object-fit: contain;
           }
         }
 
         .orderInfo {
-          min-width: 258px;
-          // margin-right: 86px;
+          width: 295px;
+          margin-right: 4px;
         }
 
         .additional {
-          width: 60px;
+          width: 135px;
         }
         .price {
+          width: 130px;
+          // text-align: center;
           font-size: 24px;
           line-height: 28px;
         }
 
         .buttonGroup {
-          width: 50px;
+          display: flex;
+          flex: 1 0 214px;
         }
       }
     }
