--- a/src/components/OrderList/orderList.module.scss
+++ b/src/components/OrderList/orderList.module.scss
@@ -107,15 +107,18 @@
 
         .additional {
           width: 135px;
+          margin-right: 4px;
         }
         .price {
           width: 130px;
           // text-align: center;
           font-size: 24px;
           line-height: 28px;
+          margin-right: 4px;
         }
 
         .buttonGroup {
+          margin-right: 22px;
           display: flex;
           flex: 1 0 214px;
         }
